--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -24,7 +24,7 @@
             <%= link_to "カテゴリ一覧", admin_genres_path %>
           </li>
           <li class="nav-item">
-            <%= link_to "管理者ログアウト", destroy_admin_session_path %>
+            <%= link_to "管理者ログアウト", destroy_admin_session_path, method: :delete %>
           </li>
 
          <!--顧客側-->
@@ -67,9 +67,9 @@
             イベント一覧
           </button>
         <ul class="dropdown-menu" aria-labelledby="btnGroupDrop1">
-          <li><a class="dropdown-item" href="#"><%= link_to "カフェ", public_post_events_path %></a></li>
-          <li><a class="dropdown-item" href="#">広告</a></li>
-          <li><a class="dropdown-item" href="#">グッズ</a></a></li>
+          <li><a class="dropdown-item" ><%= link_to(public_post_events_path, class:"text-dark") do %>カフェ<% end %></a></li>
+          <li><a class="dropdown-item" >広告</a></li>
+          <li><a class="dropdown-item" >グッズ</a></a></li>
         </ul>
         </div>
 
