--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -32,16 +32,9 @@
       <div class="btn-group" role="group" aria-label="Button group with nested dropdown">
         <button type="button" class="btn btn-light"><%= link_to "About", about_path %></button>
 
-        <div class="btn-group" role="group">
-          <button id="btnGroupDrop1" type="button" class="btn btn-light dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-            マイページ
-          </button>
-        <ul class="dropdown-menu" aria-labelledby="btnGroupDrop1">
-          <li><a class="dropdown-item" href="#">いいね一覧</a></li>
-          <li><a class="dropdown-item" href="#">投稿</a></li>
-          <li><a class="dropdown-item" href="#">編集</a></a></li>
-        </ul>
-        </div>
+        <button type="button" class="btn btn-light"><%= link_to "my page" %></button>
+
+
 
         <div class="btn-group" role="group">
           <button id="btnGroupDrop1" type="button" class="btn btn-light dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
