--- a/app/views/public/post_events/edit.html.erb
+++ b/app/views/public/post_events/edit.html.erb
@@ -3,6 +3,6 @@
 <%= render 'layouts/errors', obj: @post_event %>
   <h1>イベント編集</h1>
 
-  <%= render 'form', post_event: @post_event %>
+  <%= render 'edit_form', post_event: @post_event %>
 
 </div>
