--- a/app/views/public/members/index.html.erb
+++ b/app/views/public/members/index.html.erb
@@ -1,7 +1,6 @@
+<div class="container mt-5 mb-5">
+<br>
+<%= render partial: "header", member: @member %>
 
 
-
-<p>いいねした投稿一覧</p>
-
-<%#= render partial: "post_events/form", collection: @favorite_posts %>
-
+</div>
