--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -2,15 +2,16 @@
 
 <h1>about</h1>
 
-<p>ZE_ROSE_infomation</p>
 
-<p>当サイトは、センイルカフェや広告、スローガンなどの情報をまとめたサイトです。</p>
 
-<p>あくまで、まとめているだけですので、詳細やお問い合わせは主催者様へお願いいたします。</p>
+<p>当サイトは、センイルカフェや広告、スローガンなどの情報をまとめたサイトです。
 
-<p>限られた応援期間ですが、充実したZE_ROSEライフのお手伝いになれば幸いです(metyu絵文字挿入)</p>
+<br>あくまで、まとめているだけですので、詳細やお問い合わせは主催者様へお願いいたします。</p>
+
+<p>限られた応援期間ですが、充実したZE_ROSEライフのお手伝いになれば幸いです<%= image_tag 'mattew1.png', style: 'width: 30px; height: 30px;' %>
+</p>
 
 <p>●お問い合わせ<br>
-<%= link_to "Twitter", "" %>のDMにてお願いします。</p>
+<%= link_to "Twitter", "", class:"text-dark" %>のDMにてお願いします。</p>
 
 </div>
