--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -1,6 +1,32 @@
+
+
 <div class="container mt-5 mb-5">
 
-  <h1>Admin::Homes#top</h1>
-  <p>Find me in app/views/admin/homes/top.html.erb</p>
+<h5>会員一覧</h5>
+
+<table class="table">
+  <thead>
+    <tr>
+      <th>Name</th>
+    </tr>
+
+  </thead>
+  <tbody>
+    <% @members.each do |member| %>
+      <tr>
+        <td>
+          <%= link_to admin_member_path(member), class: "text-dark" do %>
+          <%= member.name %>
+          <% end %>
+        </td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+
+
+
 
 </div>
+
