--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,18 +1,16 @@
 <footer class="shadow-lg">
   <div class='container mt-5'>
   	<div class='row justify-content-center'>
-    	<div class='col mx-aut'>
-
+    	<div class='col-1'>
     	  <div class="sns-icons">
           <i class="fa-brands fa-square-twitter" style="color: #74a7fe;"></i>
         </div>
       </div>
-      <div class='col mx-auto'>
+      <div class='col-2'>
         <% unless admin_signed_in? %>
         	<%= link_to "管理者ログイン",admin_session_path %>
         <% end %>
-
       </div>
-
+      </div>
     </div>
 </footer>
